fixed opening page; added 2nd project image; prepare to change fonts and backgrounds

--- a/about.html
+++ b/about.html
@@ -1,22 +1,47 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="styles/2ndpage.css">
+    <link rel="stylesheet" type="text/css" href="styles/secondarypages.css">
   </head>
-  <body>
+  <body class="about">
     <div class="header">
-      <div class="image">
-        <img src="images/05-white-brick.png" alt="White brick image">
-        <h2> Robert G. Smiles Jr. <br /> Software Developer</h2>
-      <ul class="nav">
-        <li><a href="about.html"><strong>About</strong></a></li>
+      <img src="images/1439225204.png" alt="Photo of Robert G. Smiles Jr.">
+      <h2> Robert "Bob" Smiles Jr.</h2>
+      <ul>
+        <li><a href="index.html">Home</a></li>
         <li><a href="techskills.html">Tech Skills</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
 
     <div class="content">
-      <h1>Well, well, well</h1>
+      <h3><i>I'm a legal problem-solver turned programming problem-solver.  As an attorney, my focus was problem-solving and client satisfaction.  As a developer, my focus remains the same.</i></h3>
+      <h4>TECH EXPERIENCE</h4>
+        <br>
+        <p><strong>FREELANCE SOFTWARE CONSULTANT &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; RUBY ON RAILS DEVELOPER &nbsp;&nbsp;# &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; AUGUST 2015</p>
+        <p>Created versioning and supplemented/refactored existing controller methods for the API of a mobile app in development (private Github repo).</p>
+        <br>
+        <p><strong>IRON YARD ACADEMY &nbsp;&nbsp;# &nbsp;&nbsp; DEVELOPER/STUDENT &nbsp;&nbsp;# &nbsp;&nbsp;MAY - JULY 2015</h5>
+        <ul>
+          <li>The <a href="http://theironyard.com/courses/rails-engineering/">Iron Yard Academy</a> is an intensive code school focused on Ruby on Rails development and training students to think like engineers.</li>
+          <li>I created Ruby and Ruby on Rails applications throughout the course, including a large final team project in which I developed an API for a fitness training application that allows users to style their own exercise plans from pre-made or custom workouts, create a calendar to track progress towards a plan’s completion, and capture metrics from the workouts.</li>
+        </ul>
+        <br>
+      <h4>PRIOR EXPERIENCE</h4>
+        <br>
+        <p><strong>KING & KING LAW &nbsp;&nbsp;# &nbsp;&nbsp; ATTORNEY:BANKRUPTCY &nbsp;&nbsp;# &nbsp;&nbsp; OCT 2012 - MAY 2015</p>
+        <p>Met with clients to evaluate which bankruptcy chapter is most advisable; prepared bankruptcy filings and motions related to sales of real estate, mortgage loan modifications, and settlements of personal injury cases; assisted clients in addressing variety of adverse creditor actions.</p>
+        <br>
+        <p><strong>LAW OFFICE OF ROBERT G. SMILES JR., ESQ. &nbsp;&nbsp;# &nbsp;&nbsp; OWNER/ATTORNEY:GENERAL LITIGATION, CORPORATE, ENVIRONMENTAL & REAL ESTATE &nbsp;&nbsp;# &nbsp;&nbsp; 2009 - 2012</p>
+        <p>Met with clients and managed all aspects, including the negotiation and litigation, of landlord-tenant, zoning, breach of contract and personal injury cases; prepared variety of business contracts for small companies; represented energy policy organization in administrative and appellate proceedings.</p>
+
+Law Office of Robert G. Smiles Jr., Esq.  2009 - 2012
+Owner/Attorney: General Litigation, Corporate, Environmental, and Real Estate
+
+
+Hartman, Simons, Spielman & Wood  2000 - 2008
+Attorney: Commercial Real Estate, Environmental and Corporate
+Participated in real estate development teams to assist clients in their commercial real estate development; prepared development agreements, purchase agreements and other documentation;  advised real estate clients on environmental and development issues.</p>
     </div>
 
   </body>
