--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="styles/secondarypages.css">
   </head>
   <body class="contact">
     <h2> CONTACT INFORMATION </h2>
-    <ul>
-      <li> smilesr120@gmail.com</li>
-      <li><a href="https://www.linkedin.com/in/robertsmiles"> https://www.linkedin.com/in/robertsmiles</a></li>
-      <li><a href="https://github.com/smilesr"> https://github.com/smilesr</a> </li>
+    <ul class="content">
+      <li>Email me at smilesr120@gmail.com</li>
+      <li>Connect with me on LinkedIn <a href="https://www.linkedin.com/in/robertsmiles"> https://www.linkedin.com/in/robertsmiles</a></li>
+      <li>See my code on Github <a href="https://github.com/smilesr"> https://github.com/smilesr</a> </li>
+    </ul>
+    <ul id="horiz">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="techskills.html">Tech Skills</a></li>
+      <li><a href="about.html">About Me</a></li>
     </ul>
 
   </body>
