--- a/techskills.html
+++ b/techskills.html
@@ -6,36 +6,43 @@
 
   </head>
   <body class="techskills" background="images/05-white-brick.png">
+    <div>
     <h1> TECHNICAL SKILLS </h1>
-    <h2> LANGUAGES </h2>
-    <ul>
+    <h2 class="spacing"> LANGUAGES </h2>
+    <ul class="container">
       <li> Ruby </li>
       <li> HTML </li>
       <li> CSS </li>
       <li> Javascript </li>
     </ul>
-    <h2> WEB FRAMEWORKS </h2>
-    <ul>
+    <h2 class="spacing" > WEB FRAMEWORKS </h2>
+    <ul class="container">
       <li> Ruby on Rails </li>
       <li> Sinatra </li>
     </ul>
-    <h2> DATABASES </h2>
-    <ul>
+    <h2 class="spacing"> DATABASES </h2>
+    <ul class="container">
       <li> PostgreSQL </li>
       <li> SQL </li>
       <li> SQLite </li>
     </ul>
-    <h2> VERSION CONTROL </h2>
-    <ul>
+    <h2 class="spacing"> VERSION CONTROL </h2>
+    <ul class="container">
       <li> Git </li>
       <li> Github </li>
       <li> Bitbucket </li>
     </ul>
-    <h2> TOOLS/LIBRARIES/GEMS </h2>
-    <ul>
+    <h2 class="spacing"> TOOLS/LIBRARIES/GEMS </h2>
+    <ul class="container">
       <li> JBuilder </li>
       <li> Twilio </li>
       <li> Heroku </li>
+    </ul>
+  </div>
+    <ul id="horiz">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Me</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </body>
   </html>
