--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="styles/main.css">
-   <link href='https://fonts.googleapis.com/css?family=Alegreya+SC' rel='stylesheet' type='text/css'>
+   
+   <link href='https://fonts.googleapis.com/css?family=Finger+Paint' rel='stylesheet' type='text/css'>
     
   </head>
   <body background="images/05-white-brick.png" class="webcontainer">
     <div class="header">
-      <div class="image">
-        <img src="images/05-white-brick.png" alt="White brick image">
-      </div>
-      <h2> Robert G. Smiles Jr. <br /> Software Developer</h2>
-      </div>
+
+      <h2> Robert G. Smiles Jr. </h2>
+      <h3> Software Developer </h3>
+
       <ul class="nav">
         <li><a href="about.html">About Me</a></li>
         <li><a href="techskills.html">Tech Skills</a></li>
@@ -22,7 +22,9 @@
     <div class="content">
       <div id="contentBox">
       <div id="column1">
-        <img src="images/6617035.png" alt="image of zone-in application front page">
+        <a href="http://development.zone-in-app.divshot.io/#/" target="_blank">
+          <img src="images/6617035.png" alt="image of zone-in application front page" class="image_sizing">
+        </a>
         <p>ZONE-IN: This web application allows a user to create athletic workouts, incorporate workouts into comprehensive training plans, automatically populate a calendar with scheduled workouts and capture metrics from select workouts.  I coded the back-end, while teammate, <a href="http://www.kelleyrose.co/#/0"> Kelley Rose</a>, did the front-end.</p>
         <h3>TOOLS USED on BACKEND</h3>
         <ul>
@@ -35,7 +37,7 @@
       </div>
 
     <div id="column2">
-     THIS WEBSITE
+     <img src="images/portfolio_screen_shoot.png" alt="image of front page of this web site" class="image_sizing">
     </div>
 
     <div id="column3">
