made some color changes

--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
     </div>
 
     <div class="content">
-      <div id="contentBox">
+
       <div id="column1">
         <a href="http://development.zone-in-app.divshot.io/#/" target="_blank">
           <img src="images/6617035.png" alt="image of zone-in application front page" class="image_sizing">
         </a>
-        <p>ZONE-IN: This web application allows a user to create athletic workouts, incorporate workouts into comprehensive training plans, automatically populate a calendar with scheduled workouts and capture metrics from select workouts.  I coded the back-end, while teammate, <a href="http://www.kelleyrose.co/#/0"> Kelley Rose</a>, did the front-end.</p>
-        <h3>TOOLS USED on BACKEND</h3>
+        <div id="contentBox">
+        <p>This web application, <a href="http://development.zone-in-app.divshot.io/#/ZoneIn"> Zone In</a>, allows a user to create athletic workouts, incorporate workouts into comprehensive training plans, automatically populate a calendar with scheduled workouts and capture metrics from select workouts.  I coded the back-end, while teammate, <a href="http://www.kelleyrose.co/#/0"> Kelley Rose</a>, did the front-end.</p>
+        <p> The following tools were used for the app:</p>
         <ul>
           <li>Ruby on Rails</li>
           <li>Ruby</li>
@@ -34,16 +35,18 @@
           <li>Heroku</li>
           <li>JBuilder</li>
         </ul>
+       </div>
       </div>
 
     <div id="column2">
      <img src="images/portfolio_screen_shoot.png" alt="image of front page of this web site" class="image_sizing">
+     <p>I created this portfolio site from scratch</p>
     </div>
 
     <div id="column3">
      TWILIO
-    </div>
-</div>
+
+  </div>
 
     </div>
 
