--- a/techskills.html
+++ b/techskills.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="styles/secondarypages.css">
 
   </head>
-  <body class="techskills" background="images/05-white-brick.png">
+  <body class="techskills">
     <div>
     <h1> TECHNICAL SKILLS </h1>
     <h2 class="spacing"> LANGUAGES </h2>
