--- a/about.html
+++ b/about.html
@@ -18,10 +18,10 @@
       <h3><i>I'm a legal problem-solver turned programming problem-solver.  As an attorney, my focus was problem-solving and client satisfaction.  As a developer, my focus remains the same.</i></h3>
       <h4>TECH EXPERIENCE</h4>
         <br>
-        <p><strong>FREELANCE SOFTWARE CONSULTANT &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; RUBY ON RAILS DEVELOPER &nbsp;&nbsp;# &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; AUGUST 2015</p>
+        <p class="boundary">FREELANCE SOFTWARE CONSULTANT &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; RUBY ON RAILS DEVELOPER &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; AUGUST 2015</p>
         <p>Created versioning and supplemented/refactored existing controller methods for the API of a mobile app in development (private Github repo).</p>
         <br>
-        <p><strong>IRON YARD ACADEMY &nbsp;&nbsp;# &nbsp;&nbsp; DEVELOPER/STUDENT &nbsp;&nbsp;# &nbsp;&nbsp;MAY - JULY 2015</h5>
+        <p class="boundary">IRON YARD ACADEMY &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; DEVELOPER/STUDENT &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MAY - JULY 2015</h5>
         <ul>
           <li>The <a href="http://theironyard.com/courses/rails-engineering/">Iron Yard Academy</a> is an intensive code school focused on Ruby on Rails development and training students to think like engineers.</li>
           <li>I created Ruby and Ruby on Rails applications throughout the course, including a large final team project in which I developed an API for a fitness training application that allows users to style their own exercise plans from pre-made or custom workouts, create a calendar to track progress towards a plan’s completion, and capture metrics from the workouts.</li>
@@ -29,19 +29,36 @@
         <br>
       <h4>PRIOR EXPERIENCE</h4>
         <br>
-        <p><strong>KING & KING LAW &nbsp;&nbsp;# &nbsp;&nbsp; ATTORNEY:BANKRUPTCY &nbsp;&nbsp;# &nbsp;&nbsp; OCT 2012 - MAY 2015</p>
+        <p class="boundary">KING & KING LAW &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ATTORNEY:&nbsp;&nbsp;BANKRUPTCY &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; OCT 2012 - MAY 2015</p>
         <p>Met with clients to evaluate which bankruptcy chapter is most advisable; prepared bankruptcy filings and motions related to sales of real estate, mortgage loan modifications, and settlements of personal injury cases; assisted clients in addressing variety of adverse creditor actions.</p>
         <br>
-        <p><strong>LAW OFFICE OF ROBERT G. SMILES JR., ESQ. &nbsp;&nbsp;# &nbsp;&nbsp; OWNER/ATTORNEY:GENERAL LITIGATION, CORPORATE, ENVIRONMENTAL & REAL ESTATE &nbsp;&nbsp;# &nbsp;&nbsp; 2009 - 2012</p>
+        <p class="boundary">LAW OFFICE OF ROBERT G. SMILES JR., ESQ. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ATTORNEY:&nbsp;&nbsp;GENERAL LITIGATION, CORPORATE, ENVIRONMENTAL & REAL ESTATE &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2009 - 2012</p>
         <p>Met with clients and managed all aspects, including the negotiation and litigation, of landlord-tenant, zoning, breach of contract and personal injury cases; prepared variety of business contracts for small companies; represented energy policy organization in administrative and appellate proceedings.</p>
+        <br>
+        <p class="boundary">HARTMAN, SIMONS, SPIELMAN & WOOD &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ATTORNEY:&nbsp;&nbsp;COMMERCIAL REAL ESTATE, ENVIRONMENTAL & CORPORATE &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2000 - 2008</p>
+        <p>Participated in real estate development teams to assist clients in their commercial real estate development; prepared development agreements, purchase agreements and other documentation;  advised real estate clients on environmental and development issues.</p>
 
-Law Office of Robert G. Smiles Jr., Esq.  2009 - 2012
-Owner/Attorney: General Litigation, Corporate, Environmental, and Real Estate
+      <h4>EDUCATION</h4>
+
+<p>Code School: 8/2015
+Currently completing Javascript programming course.
+
+Iron Yard Academy: 5/2015 - 7/2015
+Certificate of Completion (see above for synopsis of syllabus)
+
+Coursera: 10/2014 - 11/2014
+Completed Python programming course.
+
+West Virginia University College of Law
+J.D. Law (Graduated top of class)
+
+University of Pittsburgh   M.A. Sociology
+
+Shepherd University
+B.S. Sociology</p>
 
 
-Hartman, Simons, Spielman & Wood  2000 - 2008
-Attorney: Commercial Real Estate, Environmental and Corporate
-Participated in real estate development teams to assist clients in their commercial real estate development; prepared development agreements, purchase agreements and other documentation;  advised real estate clients on environmental and development issues.</p>
+
     </div>
 
   </body>
