added logos to contact page

--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,10 @@
     <h2> CONTACT INFORMATION </h2>
     <ul class="content">
       <li>Email me at smilesr120@gmail.com</li>
-      <li>Connect with me on LinkedIn <a href="https://www.linkedin.com/in/robertsmiles"> https://www.linkedin.com/in/robertsmiles</a></li>
-      <li>See my code on Github <a href="https://github.com/smilesr"> https://github.com/smilesr</a> </li>
+      <li> Find me on Linked In <br><br><a href="https://www.linkedin.com/pub/robert-smiles/101/625/960" target ="_blank"> <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_viewmy_160x25.png" width="160" height="25" border="0" alt="View Robert Smiles's profile on LinkedIn">
+        
+    </a></li>
+      <li> Check out my code on Github <br><br><a href="https://github.com/smilesr" target="_blank"> <img src="images/Github-Mark-120px-plus.png" alt"View Robert Smiles's Github"></a> </li>
     </ul>
     <ul id="horiz">
       <li><a href="index.html">Home</a></li>
