changed fonts, layout and colors

--- a/about.html
+++ b/about.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="styles/secondarypages.css">
+    <link href='https://fonts.googleapis.com/css?family=Finger+Paint' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
   </head>
   <body class="about">
     <div class="header">
@@ -11,54 +13,17 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="techskills.html">Tech Skills</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="https://drive.google.com/folderview?id=0B9-5IoOZVYIbfkVseVExS3VzNkhhQlR0V2lzNzJMbHhjU0NYV3p0U3NWZHQ3OWxKTUZlekk&usp=sharing" target="_blank">Resume</a></li>
       </ul>
     </div>
 
     <div class="content">
-      <h3><i>I'm a legal problem-solver turned programming problem-solver.  As an attorney, my focus was problem-solving and client satisfaction.  As a developer, my focus remains the same.</i></h3>
-      <h4>TECH EXPERIENCE</h4>
-        <br>
-        <p class="boundary">FREELANCE SOFTWARE CONSULTANT &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; RUBY ON RAILS DEVELOPER &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; AUGUST 2015</p>
-        <p>Created versioning and supplemented/refactored existing controller methods for the API of a mobile app in development (private Github repo).</p>
-        <br>
-        <p class="boundary">IRON YARD ACADEMY &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; DEVELOPER/STUDENT &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MAY - JULY 2015</h5>
-        <ul>
-          <li>The <a href="http://theironyard.com/courses/rails-engineering/">Iron Yard Academy</a> is an intensive code school focused on Ruby on Rails development and training students to think like engineers.</li>
-          <li>I created Ruby and Ruby on Rails applications throughout the course, including a large final team project in which I developed an API for a fitness training application that allows users to style their own exercise plans from pre-made or custom workouts, create a calendar to track progress towards a plan’s completion, and capture metrics from the workouts.</li>
-        </ul>
-        <br>
-      <h4>PRIOR EXPERIENCE</h4>
-        <br>
-        <p class="boundary">KING & KING LAW &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ATTORNEY:&nbsp;&nbsp;BANKRUPTCY &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; OCT 2012 - MAY 2015</p>
-        <p>Met with clients to evaluate which bankruptcy chapter is most advisable; prepared bankruptcy filings and motions related to sales of real estate, mortgage loan modifications, and settlements of personal injury cases; assisted clients in addressing variety of adverse creditor actions.</p>
-        <br>
-        <p class="boundary">LAW OFFICE OF ROBERT G. SMILES JR., ESQ. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ATTORNEY:&nbsp;&nbsp;GENERAL LITIGATION, CORPORATE, ENVIRONMENTAL & REAL ESTATE &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2009 - 2012</p>
-        <p>Met with clients and managed all aspects, including the negotiation and litigation, of landlord-tenant, zoning, breach of contract and personal injury cases; prepared variety of business contracts for small companies; represented energy policy organization in administrative and appellate proceedings.</p>
-        <br>
-        <p class="boundary">HARTMAN, SIMONS, SPIELMAN & WOOD &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ATTORNEY:&nbsp;&nbsp;COMMERCIAL REAL ESTATE, ENVIRONMENTAL & CORPORATE &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 2000 - 2008</p>
-        <p>Participated in real estate development teams to assist clients in their commercial real estate development; prepared development agreements, purchase agreements and other documentation;  advised real estate clients on environmental and development issues.</p>
-
-      <h4>EDUCATION</h4>
-
-<p>Code School: 8/2015
-Currently completing Javascript programming course.
-
-Iron Yard Academy: 5/2015 - 7/2015
-Certificate of Completion (see above for synopsis of syllabus)
-
-Coursera: 10/2014 - 11/2014
-Completed Python programming course.
-
-West Virginia University College of Law
-J.D. Law (Graduated top of class)
-
-University of Pittsburgh   M.A. Sociology
-
-Shepherd University
-B.S. Sociology</p>
-
-
-
+      <h3><p>Hello, my name is Bob Smiles. I am a former attorney turned software developer. As an attorney, my focus was on superior problem-solving and client satisfaction. As a developer, this focus remains the same.</p>
+      <br>
+      <p>When not coding, I enjoy being outdoors. Tree identification is a passion of mine, and I can often be found on one of the many hiking trails near my suburban home.</p>
+      <br>
+      <p> I am also passionate about supporting sustainable food systems. I enjoy growing food in my own organic home garden and also at the local community garden. To grow, prepare, and share food with my family, friends, and community gives me great joy.</p></h3>
+     
     </div>
 
   </body>
