--- a/contact.html
+++ b/contact.html
@@ -2,20 +2,23 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="styles/secondarypages.css">
+     <link href='https://fonts.googleapis.com/css?family=Finger+Paint' rel='stylesheet' type='text/css'>
+       <link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'> 
   </head>
   <body class="contact">
     <h2> CONTACT INFORMATION </h2>
     <ul class="content">
-      <li>Email me at smilesr120@gmail.com</li>
-      <li> Find me on Linked In <br><br><a href="https://www.linkedin.com/pub/robert-smiles/101/625/960" target ="_blank"> <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_viewmy_160x25.png" width="160" height="25" border="0" alt="View Robert Smiles's profile on LinkedIn">
+      <li>Email me at: <br><br> smilesr120@gmail.com</li>
+      <li> Find me on Linked In: <br><br><a href="https://www.linkedin.com/pub/robert-smiles/101/625/960" target ="_blank"> <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_viewmy_160x25.png" width="160" height="25" border="0" alt="View Robert Smiles's profile on LinkedIn">
         
     </a></li>
-      <li> Check out my code on Github <br><br><a href="https://github.com/smilesr" target="_blank"> <img src="images/Github-Mark-120px-plus.png" alt"View Robert Smiles's Github"></a> </li>
+      <li> Check out my code on Github: <br><br><a href="https://github.com/smilesr" target="_blank"> <img src="images/Github-Mark-120px-plus.png" alt"View Robert Smiles's Github"></a> </li>
     </ul>
     <ul id="horiz">
       <li><a href="index.html">Home</a></li>
       <li><a href="techskills.html">Tech Skills</a></li>
       <li><a href="about.html">About Me</a></li>
+      <li><a href="https://drive.google.com/folderview?id=0B9-5IoOZVYIbfkVseVExS3VzNkhhQlR0V2lzNzJMbHhjU0NYV3p0U3NWZHQ3OWxKTUZlekk&usp=sharing" target="_blank">Resume</a></li>
     </ul>
 
   </body>
