--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="styles/main.css">
    
    <link href='https://fonts.googleapis.com/css?family=Finger+Paint' rel='stylesheet' type='text/css'>
-    
+    <link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'> 
   </head>
   <body background="images/05-white-brick.png" class="webcontainer">
     <div class="header">
@@ -16,6 +16,7 @@
         <li><a href="about.html">About Me</a></li>
         <li><a href="techskills.html">Tech Skills</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="https://drive.google.com/folderview?id=0B9-5IoOZVYIbfkVseVExS3VzNkhhQlR0V2lzNzJMbHhjU0NYV3p0U3NWZHQ3OWxKTUZlekk&usp=sharing" target="_blank">Resume</a></li>
       </ul>
     </div>
 
@@ -25,7 +26,7 @@
         <a href="http://development.zone-in-app.divshot.io/#/" target="_blank">
           <img src="images/6617035.png" alt="image of zone-in application front page" class="image_sizing">
         </a>
-        <div id="contentBox">
+        <div id="contentBox1">
         <p>This web application, <a href="http://development.zone-in-app.divshot.io/#/ZoneIn"> Zone In</a>, allows a user to create athletic workouts, incorporate workouts into comprehensive training plans, automatically populate a calendar with scheduled workouts and capture metrics from select workouts.  I coded the back-end, while teammate, <a href="http://www.kelleyrose.co/#/0"> Kelley Rose</a>, did the front-end.</p>
         <p> The following tools were used for the app:</p>
         <ul>
@@ -39,8 +40,16 @@
       </div>
 
     <div id="column2">
-     <img src="images/portfolio_screen_shoot.png" alt="image of front page of this web site" class="image_sizing">
-     <p>I created this portfolio site from scratch</p>
+     <img src="images/portfolio_screen_shot_update.png" alt="image of front page of this web site" class="image_sizing">
+     <div id="contentBox2">
+     <p>I created this portfolio site from scratch.</p>
+     <p> The following tools were used for this website:</p>
+     <ul>
+        <li> HTML5 </li>
+        <li> CSS3 </li>
+      </ul>
+    </div>
+  </div>
     </div>
 
     <div id="column3">
