--- a/techskills.html
+++ b/techskills.html
@@ -3,50 +3,57 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="styles/secondarypages.css">
-
+    <link href='https://fonts.googleapis.com/css?family=Finger+Paint' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'> 
   </head>
   <body class="techskills">
-    <div>
     <h1> TECHNICAL SKILLS </h1>
-    <h2 class="spacing"> LANGUAGES </h2>
-    <ul class="container">
-      <li> Ruby </li>
-      <li> HTML </li>
-      <li> CSS </li>
-      <li> Javascript </li>
-    </ul>
-    <h2 class="spacing" > WEB FRAMEWORKS </h2>
-    <ul class="container">
-      <li> Ruby on Rails </li>
-      <li> Sinatra </li>
-    </ul>
-    <h2 class="spacing"> DATABASES </h2>
-    <ul class="container">
-      <li> PostgreSQL </li>
-      <li> SQL </li>
-      <li> SQLite </li>
-    </ul>
-    <h2 class="spacing"> VERSION CONTROL </h2>
-    <ul class="container">
-      <li> Git </li>
-      <li> Github </li>
-      <li> Bitbucket </li>
-    </ul>
-    <h2 class="spacing"> TOOLS/LIBRARIES/GEMS </h2>
-    <ul class="container">
-      <li> JBuilder </li>
-      <li> Twilio </li>
-      <li> Heroku </li>
-    </ul>
-  </div>
+    <div class="across">
+      <h3> LANGUAGES </h3>
+      <ul>
+        <li> Ruby </li>
+        <li> HTML </li> 
+        <li> CSS </li>
+        <li> Javascript </li>
+      </ul>
+    </div>
+    <div class="across">
+      <h3> WEB FRAMEWORKS </h3>
+      <ul>
+        <li> Ruby on Rails </li>
+        <li> Sinatra </li>
+      </ul>
+    </div>
+    <div class="across">
+      <h3> DATABASES </h3>
+      <ul>
+        <li> PostgreSQL </li>
+        <li> SQL </li>
+        <li> SQLite </li>
+      </ul>
+    </div>
+    <div class="across">
+      <h3> VERSION CONTROL </h3>
+      <ul>
+        <li> Git </li>
+        <li> Github </li>
+        <li> Bitbucket </li>
+      </ul>
+    </div>
+    <div class="across">
+      <h3> TOOLS/LIBRARIES/GEMS </h3>
+      <ul>
+        <li> JBuilder </li>
+        <li> Twilio </li>
+        <li> Heroku </li>
+      </ul>
+    </div>
+    <div style="clear:both;"></div>
     <ul id="horiz">
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About Me</a></li>
       <li><a href="contact.html">Contact</a></li>
+      <li><a href="hrefttps://drive.google.com/folderview?id=0B9-5IoOZVYIbfkVseVExS3VzNkhhQlR0V2lzNzJMbHhjU0NYV3p0U3NWZHQ3OWxKTUZlekk&usp=sharing" target="_blank">Resume</a></li> 
     </ul>
   </body>
   </html>
-
-
-  </body>
-</html>
