added hotornot app

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
       <li> Find me on Linked In: <br><br><a href="https://www.linkedin.com/pub/robert-smiles/101/625/960" target ="_blank"> <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_viewmy_160x25.png" width="160" height="25" border="0" alt="View Robert Smiles's profile on LinkedIn">
         
     </a></li>
-      <li> Check out my code on Github: <br><br><a href="https://github.com/smilesr" target="_blank"> <img src="images/Github-Mark-120px-plus.png" alt"View Robert Smiles's Github"></a> </li>
+      <li> Check out my code on Github: <br><br><a href="https://github.com/smilesr" target="_blank"> <img src="images/Github-Mark-120px-plus.png" alt="View Robert Smiles's Github"></a> </li>
     </ul>
     <ul id="horiz">
       <li><a href="index.html">Home</a></li>
