--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
           <img src="images/6617035.png" alt="image of zone-in application front page" class="image_sizing">
         </a>
         <div id="contentBox1">
-        <p>This web application, <a href="http://development.zone-in-app.divshot.io/#/ZoneIn"> Zone In</a>, allows a user to create athletic workouts, incorporate workouts into comprehensive training plans, automatically populate a calendar with scheduled workouts and capture metrics from select workouts.  I coded the back-end, while teammate, <a href="http://www.kelleyrose.co/#/0"> Kelley Rose</a>, did the front-end.</p>
+        <p>This web application, <a href="http://development.zone-in-app.divshot.io/#/ZoneIn"> Zone In</a>, allows a user to create athletic workouts, incorporate workouts into comprehensive training plans, automatically populate a calendar with scheduled workouts and capture metrics from select workouts.</p>
+
+        <p>I coded the back-end, while teammate, <a href="http://www.kelleyrose.co/#/0"> Kelley Rose</a>, did the front-end.</p>
         <p> The following tools were used for the app:</p>
         <ul>
           <li>Ruby on Rails</li>
@@ -40,24 +42,39 @@
       </div>
 
     <div id="column2">
-     <img src="images/portfolio_screen_shot_update.png" alt="image of front page of this web site" class="image_sizing">
-     <div id="contentBox2">
-     <p>I created this portfolio site from scratch.</p>
-     <p> The following tools were used for this website:</p>
-     <ul>
-        <li> HTML5 </li>
-        <li> CSS3 </li>
-      </ul>
+      <img src="images/portfolio_screen_shot_update.png" alt="image of front page of this web site" class="image_sizing">
+      <div id="contentBox2">
+        <p>I created this portfolio site from scratch.</p>
+        <p> The following tools were used for this website:</p>
+        <ul>
+          <li> HTML5 </li>
+          <li> CSS3 </li>
+        </ul>
+      </div>
     </div>
-  </div>
-    </div>
+    
 
     <div id="column3">
-     TWILIO
+      <a href="https://github.com/smilesr/hotornot" target="_blank"><img src="images/hotornot.png" alt="image of Hot or Not texting app" class="image_sizing"></a>
 
-  </div>
+      <div id="contentBox3">
+        <p>This is a text-based, weather-focused game, <a href="https://github.com/smilesr/hotornot" target="_blank"> Hot Or Not </a>, played on your mobile phone.</p>
+  
+        <p>A user texts the name of a city and state to the designated phone number then a text is sent out to all participants asking them to guess the current temperature in that city.</p>
 
+        <p>The app then queries the weather underground API, evaluates each participant's guess against the actual temperature and sends a return text informing the participant of the correctness of the guess. More features to be added. </p>
+
+        <p> The following tools were used for this app:</p>
+        <ul>
+          <li> Ruby on Rails </li>
+          <li> Ruby </li>
+          <li> Twilio </li>
+          <li> Weather underground API </li>
+          <li> PostgreSQL </li>
+          <li> Heroku </li>
+        </ul>
+      </div>
     </div>
-
-  </body>
+  </div>
+ </body>
 </html>
