--- a/techskills.html
+++ b/techskills.html
@@ -53,7 +53,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About Me</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="hrefttps://drive.google.com/folderview?id=0B9-5IoOZVYIbfkVseVExS3VzNkhhQlR0V2lzNzJMbHhjU0NYV3p0U3NWZHQ3OWxKTUZlekk&usp=sharing" target="_blank">Resume</a></li> 
+      <li><a href="https://drive.google.com/folderview?id=0B9-5IoOZVYIbfkVseVExS3VzNkhhQlR0V2lzNzJMbHhjU0NYV3p0U3NWZHQ3OWxKTUZlekk&usp=sharing" target="_blank">Resume</a></li> 
     </ul>
   </body>
   </html>
