added link to github on front page; fixed bad link to resume; narrowed borders around text on home page

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <li>JBuilder</li>
         </ul>
        </div>
+
       </div>
 
     <div id="column2">
@@ -50,6 +51,9 @@
           <li> HTML5 </li>
           <li> CSS3 </li>
         </ul>
+      </div>
+      <div class="extra">
+       <p> Check out my code from other projects on <a href="https://github.com/smilesr" target="_blank"> Github </a></p>
       </div>
     </div>
     
