--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,11 @@
   <body class="contact">
     <h2> CONTACT INFORMATION </h2>
     <ul class="content">
-      <li>Email me at: <br><br> smilesr120@gmail.com</li>
-      <li> Find me on Linked In: <br><br><a href="https://www.linkedin.com/pub/robert-smiles/101/625/960" target ="_blank"> <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_viewmy_160x25.png" width="160" height="25" border="0" alt="View Robert Smiles's profile on LinkedIn">
+      <li>Email me at: <br><br> <img src="images/labelgen.email.png" alt="email address for Bob Smiles"></li>
+      <li>Find me on Linked In: <br><br><a href="https://www.linkedin.com/pub/robert-smiles/101/625/960" target ="_blank"> <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_viewmy_160x25.png" width="160" height="25" border="0" alt="View Robert Smiles's profile on LinkedIn">
         
     </a></li>
-      <li> Check out my code on Github: <br><br><a href="https://github.com/smilesr" target="_blank"> <img src="images/Github_Logo.png" alt="View Robert Smiles's Github" id="resizing"></a> </li>
+      <li> Check out my code on Github: <br><br><a href="https://github.com/smilesr" target="_blank"> <img src="images/github_logo.png" alt="View Robert Smiles's Github" id="resizing"></a> </li>
     </ul>
     <ul id="horiz">
       <li><a href="index.html">Home</a></li>
