--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    
    <link href='https://fonts.googleapis.com/css?family=Finger+Paint' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'> 
+    <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
   </head>
   <body background="images/05-white-brick.png" class="webcontainer">
     <div class="header">
@@ -29,8 +30,7 @@
         <div id="contentBox1">
         <p>This web application, <a href="http://development.zone-in-app.divshot.io/#/ZoneIn"> Zone In</a>, allows a user to create athletic workouts, incorporate workouts into comprehensive training plans, automatically populate a calendar with scheduled workouts and capture metrics from select workouts.</p>
 
-        <p>I coded the back-end, while teammate, <a href="http://www.kelleyrose.co/#/0"> Kelley Rose</a>, did the front-end.</p>
-        <p> The following tools were used for the app:</p>
+        <p>The app was written in approximately two weeks. My teammate coded the front-end using Javascript, Angular and jQuery.  I wrote the back-end using the following tools:        </p>
         <ul>
           <li>Ruby on Rails</li>
           <li>Ruby</li>
@@ -45,7 +45,7 @@
     <div id="column2">
       <img src="images/portfolio_screen_shot_update.png" alt="image of front page of this web site" class="image_sizing">
       <div id="contentBox2">
-        <p>I created this portfolio site from scratch.</p>
+        <p>I taught myself the necessary tools for, and created this, portfolio site from scratch.</p>
         <p> The following tools were used for this website:</p>
         <ul>
           <li> HTML5 </li>
@@ -62,18 +62,14 @@
       <a href="https://github.com/smilesr/hotornot" target="_blank"><img src="images/hotornot.png" alt="image of Hot or Not texting app" class="image_sizing"></a>
 
       <div id="contentBox3">
-        <p>This is a text-based, weather-focused game, <a href="https://github.com/smilesr/hotornot" target="_blank"> Hot Or Not </a>, played on your mobile phone.</p>
-  
-        <p>A user texts the name of a city and state to the designated phone number then a text is sent out to all participants asking them to guess the current temperature in that city.</p>
+        <p>This is a texting-based, weather-focused game, <a href="https://github.com/smilesr/hotornot" target="_blank"> Hot Or Not </a>, played on your mobile phone. A user texts the name of a city and state to a Twilio phone number then a text is sent out to all participants asking them to guess the current temperature in that city.</p>
 
-        <p>The app then queries the weather underground API, evaluates each participant's guess against the actual temperature and sends a return text informing the participant of the correctness of the guess. More features to be added. </p>
+        <p>The app then queries the weather underground API and evaluates all answers. More features to be added.  The following tools have been used so far:</p>
 
-        <p> The following tools were used for this app:</p>
         <ul>
           <li> Ruby on Rails </li>
-          <li> Ruby </li>
           <li> Twilio </li>
-          <li> Weather underground API </li>
+          <li> Weather Underground API </li>
           <li> PostgreSQL </li>
           <li> Heroku </li>
         </ul>
