pages done except for resume page

--- a/about.html
+++ b/about.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="styles/secondarypages.css">
+    <link rel="stylesheet" type="text/css" href="styles/about.css">
     <link href='https://fonts.googleapis.com/css?family=Finger+Paint' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
   </head>
-  <body class="about">
+  <body> 
     <div class="header">
-      <img src="images/1439225204.png" alt="Photo of Robert G. Smiles Jr.">
-      <h2> Robert "Bob" Smiles Jr.</h2>
-      <ul>
+
+      <h2> Robert G. Smiles Jr. </h2>
+      <h3> Software Developer </h3>
+
+      <ul class="nav">
         <li><a href="index.html">Home</a></li>
-        <li><a href="techskills.html">Tech Skills</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="https://drive.google.com/folderview?id=0B9-5IoOZVYIbfkVseVExS3VzNkhhQlR0V2lzNzJMbHhjU0NYV3p0U3NWZHQ3OWxKTUZlekk&usp=sharing" target="_blank">Resume</a></li>
+        <li><a href="resume.html">Resume</a></li>
       </ul>
     </div>
 
@@ -24,6 +26,9 @@
       <br>
       <p> I am also passionate about supporting sustainable food systems. I enjoy growing food in my own organic home garden and also at the local community garden. To grow, prepare, and share food with my family, friends, and community gives me great joy.</p></h3>
      
+    </div>
+    <div>
+      <img src = "images/farmerbobcolor_edited-1.png">
     </div>
 
   </body>
