--- a/contact.html
+++ b/contact.html
@@ -1,25 +1,41 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="styles/secondarypages.css">
+    <link rel="stylesheet" type="text/css" href="styles/contact.css">
      <link href='https://fonts.googleapis.com/css?family=Finger+Paint' rel='stylesheet' type='text/css'>
        <link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'> 
   </head>
-  <body class="contact">
-    <h2> CONTACT INFORMATION </h2>
-    <ul class="content">
-      <li>Email me at: <br><br> <img src="images/labelgen.email.png" alt="email address for Bob Smiles"></li>
-      <li>Find me on Linked In: <br><br><a href="https://www.linkedin.com/pub/robert-smiles/101/625/960" target ="_blank"> <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_viewmy_160x25.png" width="160" height="25" border="0" alt="View Robert Smiles's profile on LinkedIn">
+  <body>
+    <div class="header">
+
+      <h2> Robert G. Smiles Jr. </h2>
+      <h3> Software Developer </h3>
+
+      <ul class="nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <!--<li><a href="https://drive.google.com/folderview?id=0B9-5IoOZVYIbfkVseVExS3VzNkhhQlR0V2lzNzJMbHhjU0NYV3p0U3NWZHQ3OWxKTUZlekk&usp=sharing" target="_blank">Resume</a></li>-->
+      </ul>
+    </div>
+    <h3> Please contact me at . . . </h3>
+    <div class="content">
+      <div class="boxes"><a href="mailto:smilesr120@gmail.com" target="_blank"><img src="images/emailimage.png" alt="email address for Bob Smiles" id="resizing_email"> </a></div>
+      
+      <!--<li>Find me on Linked In: <br><br><a href="https://www.linkedin.com/pub/robert-smiles/101/625/960" target ="_blank"> <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_viewmy_160x25.png" width="160" height="25" border="0" alt="View Robert Smiles's profile on LinkedIn">-->
+
+      <div class="boxes"><a href="https://www.linkedin.com/in/robertsmiles" target="_blank"> <img src="images/linked-in.png" alt="View Robert Smiles's LinkedIn profile" id="resizing_linked"></a></div>
         
-    </a></li>
-      <li> Check out my code on Github: <br><br><a href="https://github.com/smilesr" target="_blank"> <img src="images/githublogo.png" alt="View Robert Smiles's Github" id="resizing"></a> </li>
-    </ul>
-    <ul id="horiz">
+    <!--</a></li>-->
+      <div class="boxes"><p id="git"><a href="https://github.com/smilesr" target="_blank"> <img src="images/GitHub-Mark-120px-plus.png" alt="View Robert Smiles's Github" id="resizing_git"></div>
+
+    <!--<ul id="horiz">
       <li><a href="index.html">Home</a></li>
       <li><a href="techskills.html">Tech Skills</a></li>
       <li><a href="about.html">About Me</a></li>
-      <li><a href="https://drive.google.com/folderview?id=0B9-5IoOZVYIbfkVseVExS3VzNkhhQlR0V2lzNzJMbHhjU0NYV3p0U3NWZHQ3OWxKTUZlekk&usp=sharing" target="_blank">Resume</a></li>
-    </ul>
+      <li><a href="https://drive.google.com/folderview?id=0B9-5IoOZVYIbfkVseVExS3VzNkhhQlR0V2lzNzJMbHhjU0NYV3p0U3NWZHQ3OWxKTUZlekk&usp=sharing" target="_blank">Resume</a></li>-->
+    </div>
 
   </body>
 </html>
