--- a/index.html
+++ b/index.html
@@ -7,74 +7,22 @@
     <link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'> 
     <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
   </head>
-  <body background="images/05-white-brick.png" class="webcontainer">
-    <div class="header">
+
+  <body>
+    <header>
 
       <h2> Robert G. Smiles Jr. </h2>
       <h3> Software Developer </h3>
 
       <ul class="nav">
         <li><a href="about.html">About Me</a></li>
-        <li><a href="techskills.html">Tech Skills</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="https://drive.google.com/folderview?id=0B9-5IoOZVYIbfkVseVExS3VzNkhhQlR0V2lzNzJMbHhjU0NYV3p0U3NWZHQ3OWxKTUZlekk&usp=sharing" target="_blank">Resume</a></li>
+        <li><a href="resume.html">Resume</a></li>
       </ul>
+    </header>
+    <div>
+      <img src ="images/bobnmad.png">
     </div>
-
-    <div class="content">
-
-      <div id="column1">
-        <a href="http://development.zone-in-app.divshot.io/#/" target="_blank">
-          <img src="images/6617035.png" alt="image of zone-in application front page" class="image_sizing">
-        </a>
-        <div id="contentBox1">
-        <p>This web application, <a href="http://development.zone-in-app.divshot.io/#/ZoneIn"> Zone In</a>, allows a user to create athletic workouts, incorporate workouts into comprehensive training plans, automatically populate a calendar with scheduled workouts and capture metrics from select workouts.</p>
-
-        <p>The app was written in approximately two weeks. My teammate coded the front-end using Javascript, Angular and jQuery.  I wrote the back-end using the following tools:        </p>
-        <ul>
-          <li>Ruby on Rails</li>
-          <li>Ruby</li>
-          <li>PostgreSQL</li>
-          <li>Heroku</li>
-          <li>JBuilder</li>
-        </ul>
-       </div>
-
-      </div>
-
-    <div id="column2">
-      <img src="images/portfolio_screen_shot_update.png" alt="image of front page of this web site" class="image_sizing">
-      <div id="contentBox2">
-        <p>I taught myself the necessary tools for, and created this, portfolio site from scratch.</p>
-        <p> The following tools were used for this website:</p>
-        <ul>
-          <li> HTML5 </li>
-          <li> CSS3 </li>
-        </ul>
-      </div>
-      <div class="extra">
-       <p> Check out my code from other projects on <a href="https://github.com/smilesr" target="_blank"> Github </a></p>
-      </div>
-    </div>
-    
-
-    <div id="column3">
-      <a href="https://github.com/smilesr/hotornot" target="_blank"><img src="images/hotornot.png" alt="image of Hot or Not texting app" class="image_sizing"></a>
-
-      <div id="contentBox3">
-        <p>This is a texting-based, weather-focused game, <a href="https://github.com/smilesr/hotornot" target="_blank"> Hot Or Not </a>, played on your mobile phone. A user texts the name of a city and state to a Twilio phone number then a text is sent out to all participants asking them to guess the current temperature in that city.</p>
-
-        <p>The app then queries the weather underground API and evaluates all answers. More features to be added.  The following tools have been used so far:</p>
-
-        <ul>
-          <li> Ruby on Rails </li>
-          <li> Twilio </li>
-          <li> Weather Underground API </li>
-          <li> PostgreSQL </li>
-          <li> Heroku </li>
-        </ul>
-      </div>
-    </div>
-  </div>
  </body>
 </html>
