changed code to address the undesirable resizing of the photo on the main page when viewed in safari and firefox

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
         <li><a href="resume.html">Resume</a></li>
       </ul>
     </header>
-    <div>
+    <div class='bounding-box'>
+  </div>  
+    <!--<div>
       <img src ="images/bobnmad.png">
-    </div>
+    </div>-->
  </body>
 </html>
