new attempt to place photo

--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
         <li><a href="resume.html">Resume</a></li>
       </ul>
     </header>
-    <div class='bounding-box'>
-  </div>  
-    <!--<div>
-      <img src ="images/bobnmad.png">
-    </div>-->
+    <div>
+      <img class="displayed" src ="images/bobnmad.png" alt="Photo of Bob Smiles and wife">
+    </div>
  </body>
 </html>
