added button for resume download

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </ul>
     </header>
     <div>
-      <img class="displayed" src ="images/bobnmad.png" alt="Photo of Bob Smiles and wife">
+      <img src ="images/bobnmad.png" alt="Photo of Bob Smiles and wife">
     </div>
  </body>
 </html>
