--- a/resume.html
+++ b/resume.html
@@ -20,10 +20,15 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
-    <div class=".btn">
-    </div>
+
     <div class = "content">
+
+      <div id = "buttoncenter">
+        <a href="https://drive.google.com/folderview?id=0B9-5IoOZVYIbfkVseVExS3VzNkhhQlR0V2lzNzJMbHhjU0NYV3p0U3NWZHQ3OWxKTUZlekk&usp=sharing"<button name="button" class="butt-on" target="_blank">Resume-PDF Version</a>
+      </div>
     <div id="techskills"> <h3> TECHNICAL SKILLS </h3> </div>
+
+    <div id="shift">
     
     <div class="across">
       <h4> LANGUAGES </h4>
@@ -65,6 +70,7 @@
         <li> Heroku </li>
       </ul>
     </div>
+  </div>
 
 
     <h3 id="experience"> RECENT EXPERIENCE </h3>
