added text about portfolio site

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,8 @@
     <div id="column2">
       <img src="images/screen-shot-9-27-15.png" alt="image of front page of this web site" class="image_sizing">
       <div id="contentBox2">
-        <p>I taught myself the necessary tools for, and created this, portfolio site from scratch.</p>
+        <p>I taught myself the necessary tools to create this portfolio site.  It was a challenge to code using only the markup and styling languages but it was important to me to learn web page structure first hand.</p>
+
         <p> The following tools were used for this website:</p>
         <ul>
           <li> HTML5 </li>
