fix photo on about to prevent shifting on mobile display

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
      
     </div>
     <div>
-      <img src = "images/farmerbobcolor_edited-1.png">
+      <img id="farmer" src = "images/farmerbobcolor_edited-1.png">
     </div>
 
   </body>
