added files that were left out in previous commit

--- a/about.html
+++ b/about.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="styles/about.css">
     <link href='https://fonts.googleapis.com/css?family=Finger+Paint' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
@@ -11,7 +15,7 @@
       <h2> Robert G. Smiles Jr. </h2>
       <h3> Software Developer </h3>
 
-      <ul class="nav">
+      <ul class="list-inline text-center">
         <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -20,15 +24,15 @@
     </div>
 
     <div class="content">
-      <h3><p>Hello, my name is Bob Smiles. I am a former attorney turned software developer. As an attorney, my focus was on superior problem-solving and client satisfaction. As a developer, this focus remains the same.</p>
+      <p>Hello, my name is Bob Smiles. I am a former attorney turned software developer. As an attorney, my focus was on superior problem-solving and client satisfaction. As a developer, this focus remains the same.</p>
       <br>
       <p>When not coding, I enjoy being outdoors. Tree identification is a passion of mine, and I can often be found on one of the many hiking trails near my suburban home.</p>
       <br>
-      <p> I am also passionate about supporting sustainable food systems. I enjoy growing food in my own organic home garden and also at the local community garden. To grow, prepare, and share food with my family, friends, and community gives me great joy.</p></h3>
+      <p> I am also passionate about supporting sustainable food systems. I enjoy growing food in my own organic home garden and also at the local community garden. To grow, prepare, and share food with my family, friends, and community gives me great joy.</p>
      
     </div>
     <div>
-      <img id="farmer" src = "images/farmerbobcolor_edited-1.png">
+      <img class="center-block" src = "images/farmerbobcolor_edited-1.png">
     </div>
 
   </body>
