--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="styles/main.css">
    
    <link href='https://fonts.googleapis.com/css?family=Finger+Paint' rel='stylesheet' type='text/css'>
@@ -14,7 +18,7 @@
       <h2> Robert G. Smiles Jr. </h2>
       <h3> Software Developer </h3>
 
-      <ul class="nav">
+      <ul class="list-inline text-center">
         <li><a href="about.html">About Me</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -22,7 +26,7 @@
       </ul>
     </header>
     <div>
-      <img src ="images/bobnmad.png" alt="Photo of Bob Smiles and wife">
+      <img class="center-block" src ="images/rsz_bobnmad.jpg" alt="Photo of Bob Smiles and wife">
     </div>
  </body>
 </html>
