--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,7 @@
 
         <p> The following tools were used for this website:</p>
         <ul>
+          <li> Bootstrap3 </li>
           <li> HTML5 </li>
           <li> CSS3 </li>
         </ul>
